@@ -1,6 +1,7 @@
 Home",
 "BasicOverview",
 "BasicDetail",
+"HeaderVertical",
 "Publications",
 "ArticleTraditional",
 "ArticleReadability",
@@ -8,6 +9,7 @@ Home",
 "Homepage",
 "Basic - Overview",
 "Basic - Detail",
+"Header - Vertical",
 "Publications - Overview",
 "Article - Traditional",
 "Article - Readability",
