@@ -1,4 +1,6 @@
 BasicOverview",
 "BasicDetail",
+"HeaderVertical",
 "Basic - Overview",
-"Basic - Detail
+"Basic - Detail",
+"Header - Vertical
