@@ -3,9 +3,10 @@
 ## Romanesco 0.11
 Upcoming release
 
-Planned features:
+New / planned features:
 - Add ContentBlock for creating previous / next page navigation
 - Add ContentBlock for creating a button group
+- Add template with main navigation left of content area
 
 Fixes and improvements:
 - Responsive images through srcset and picture attributes
